--- a/index.html
+++ b/index.html
@@ -1,3 +1,47 @@
 ---
 layout: default
+body_class: "home-page"
 ---
+
+<section class="intro">
+  <p>
+  Offering neuropsychological and psychological assessments and therapy (mainly
+  cognitive behaviour therapy) for children and adolescents.
+  </p>
+</section>
+
+<section class="services">
+  <h2>Services</h2>
+  <p>
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec mollis
+  diam. Pellentesque vulputate ligula ut eros scelerisque feugiat. Proin sodales
+  pharetra sem, non lacinia orci vestibulum sollicitudin.
+  </p>
+  <p class="continue-reading">
+  <a href="/services">Services offered</a>
+  </p>
+</section>
+
+<section class="about">
+  <h2>About</h2>
+  <p>
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec mollis
+  diam. Pellentesque vulputate ligula ut eros scelerisque feugiat. Proin sodales
+  pharetra sem, non lacinia orci vestibulum sollicitudin.
+  </p>
+  <p class="continue-reading">
+  <a href="/about">More about Susanna</a>
+  </p>
+</section>
+
+<section class="contact">
+  <h2>Contact</h2>
+  <p>
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec mollis
+  diam. Pellentesque vulputate ligula ut eros scelerisque feugiat. Proin sodales
+  pharetra sem, non lacinia orci vestibulum sollicitudin.
+  </p>
+  <p class="continue-reading">
+  <a href="/contact" class="button">Contact details</a>
+  </p>
+</section>
