Update intro copy.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ body_class: "home-page"
 <section class="intro">
   <img src="/images/susanna.jpg" alt="Dr Susanna Waern">
   <p>
-  Offering neuropsychological and psychological assessments and therapy (mainly
-  cognitive behaviour therapy) for children and adolescents.
+  Psychological and neuropsychological assessments and interventions for
+  children, adolescents and families.
   </p>
 </section>
 
