Update home page services copy.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@ body_class: "home-page"
 <section class="services">
   <h2>Services</h2>
   <p>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec mollis
-  diam. Pellentesque vulputate ligula ut eros scelerisque feugiat. Proin sodales
-  pharetra sem, non lacinia orci vestibulum sollicitudin.
+  Psychological assessments and interventions can help with emotional and
+  behavioural problems that are common in childhood and adolescence.
+  Neuropsychological and cognitive assessments can establish a person’s
+  strength and weakness in terms of academic issues and help the child to
+  progress academically through individually tailored support from school,
+  family and therapists.
   </p>
   <p class="continue-reading">
   <a href="/services">Services offered</a>
