Add content to service page.

--- a/services.html
+++ b/services.html
@@ -2,3 +2,75 @@
 layout: default
 body_class: "services-page"
 ---
+
+<h1>Services offered</h1>
+<h2>Psychological assessment</h2>
+<p>
+A psychological assessment looks at how a problem developed, what maintains it
+and helps inform how the problem will be resolved. Psychologists are generally
+less concerned with diagnosis and instead specialises in finding an individual
+so called formulation for every person. This formulation then helps tailor the
+intervention.
+</p>
+<h2>Neuropsychological/cognitive assessment</h2>
+<p>
+A neuropsychological assessment is tailored to address a specific problem that
+impacts on an individual's academic progress, for example problems with memory
+or with planning and organising work. An assessment looks at a child's
+cognitive strengths and weaknesses and considers how a child strengths can be
+used to lessen the impact of any weakness. The assessment report contains
+recommendations for the family and for school.
+</p>
+<p>
+A cognitive assessment is an assessment of general intellectual functioning
+(IQ) and looks at four different domains – verbal comprehension, perceptual
+reasoning (non- verbal problem solving), working memory (manipulating
+information whilst holding it in mind) and processing speed (processing
+information and responding to it using a simple motor task). A full scale IQ
+score cannot always be given if there is a lot of discrepancy between the
+different areas assessed, however, if this is a case, the report will discuss
+this discrepancy and report the results from each individual area.
+</p>
+<h2>Psychological therapy</h2>
+<p>
+Many children and young people go through emotional difficulties when they grow
+up. Going through ups and downs is normal and can often be resolved with the
+help and support of families and friends. However, sometimes people can get
+stuck in negative cycles which are difficult to break. This is when
+psychological therapy can be helpful. Common problems in childhood and
+adolescence include low mood, anxiety, behaviour problems, low self-esteem and
+post traumatic stress disorder (PTSD). Susanna offers a range of therapies,
+including Cognitive Behaviour Therapy (CBT), Acceptance and Commitment Therapy
+(ACT), Narrative Therapy, Solution Focused Therapy and Family Therapy (Systemic
+Therapy). She offers individualised therapy, taking the developmental stage of
+the child or young person into account.  Adapted forms of these therapies are
+offered to younger children and children/young people with cognitive
+difficulties.
+</p>
+<h2>Paediatrics</h2>
+<p>
+Children with serious or chronic illness are at increased risk of psychological
+problems. Psychological therapy can be helpful in terms of addressing a range
+of different issues related to having a physical health condition, such as
+accepting a diagnosis, adherence to medical treatment, self-esteem issues
+related to physical health problems and pain management.
+</p>
+<h2>Cognitive Behaviour Therapy (CBT)</h2>
+<p>
+CBT is a goal focused, problem solving therapy and looks at how our thoughts
+and behaviours impacts on our mood. Cycles of thoughts, feelings and behaviours
+are identified and the therapy consists of breaking these negative cycles by
+changing behaviours and challenging thoughts. CBT has been found helpful for
+problems such as low mood, anxiety (including phobias), low self-esteem and
+PTSD.
+</p>
+<h2>Acceptance and Commitment Therapy (ACT)</h2>
+<p>
+ACT is a form of cognitive therapy but it's main focus is getting on with life
+despite difficulties. ACT has a good evidence base for pain management. One
+area of ACT is to develop Mindfulness, a concept that is becoming increasingly
+influential in today's society.
+</p>
+<h2>Narrative Therapy</h2>
+<h2>Solution Focused Therapy</h2>
+<h2>Systemic Therapy (Family Therapy)</h2>
