Add content to the about page.

--- a/about.html
+++ b/about.html
@@ -2,3 +2,33 @@
 layout: default
 body_class: "about-page"
 ---
+
+<h1>About Dr Susanna Waern</h1>
+<p>
+Susanna completed her doctoral training in 2007 at the University of Surrey.
+She has since worked in both Paediatrics and community Child and Adolescent
+Mental Health Services (CAMHS) and has gained significant experience of working
+with a range of different childhood problems as well as physical health
+problems.
+</p>
+<p>
+Since 2011, Susanna has worked in the private sector, including working for
+Recolo (providers of neuropsychological rehabilitation). In addition to her
+clinical work, Susanna has worked with Pearson Assessment UK (producers of
+neuropsychological assessments) on a standardisation project for the TEA-Ch 2
+(Test of Everyday Attention for Children). She is also a guest lecturer on the
+Child and Adolescent Mental Health Master's course (MSc) at University College
+London.
+</p>
+<p>
+Since qualifying, Susanna has kept abreast with the developments of cognitive
+behaviour therapes and is developing her practise in accordance to new evidence
+in order to provide her clients with evidence based treatments. This includes
+Acceptance and Commitment Therapy (ACT) and the use of Mindfulness as a tool to
+support therapy.
+</p>
+<p>
+Susanna is registered with the Health and Care Professions Council and is a
+member of the British Psychological Society, including the Division for
+Clinical Psychology and the Faculty for Children and Young People.
+</p>
