Fix weird apostrophe on home page.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body_class: "home-page"
   <p>
   Psychological assessments and interventions can help with emotional and
   behavioural problems that are common in childhood and adolescence.
-  Neuropsychological and cognitive assessments can establish a person’s
+  Neuropsychological and cognitive assessments can establish a person's
   strength and weakness in terms of academic issues and help the child to
   progress academically through individually tailored support from school,
   family and therapists.
