Add content to contact page.

--- a/contact.html
+++ b/contact.html
@@ -2,3 +2,23 @@
 layout: default
 body_class: "contact-page"
 ---
+
+<h1>Contact</h1>
+<p>
+Sessions can be arranged at the following addresses:
+</p>
+<p>
+The Gestalt Centre<br>
+96-100 Clifton Street<br>
+London EC2A 4TP<br>
+(Liverpool Street Station)<br>
+</p>
+<p>
+Barkantine Practice<br>
+121 Westferry Road<br>
+London, E14 8JH<br>
+(Canary Wharf)<br>
+</p>
+<p>
+Home visits and/or appointments in schools can also be arranged for a charge.
+</p>
