Update intro copy.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@ body_class: "home-page"
 <section class="intro">
   <img src="/images/susanna.jpg" alt="Dr Susanna Waern">
   <p>
-  Psychological and neuropsychological assessments and interventions for
-  children, adolescents and families.
+  Psychological and neuropsycholgical assessments and interventions for children
+  and young people, addressing emotional, behavioural, physical/medical and
+  learning issues.
   </p>
 </section>
 
