Replace intro image.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ body_class: "home-page"
 ---
 
 <section class="intro">
-  <img src="/images/susanna.jpg" alt="Dr Susanna Waern">
+  <img src="/images/susanna_and_aston.jpg" alt="Dr Susanna Waern and Aston">
   <p>
   Psychological and neuropsycholgical assessments and interventions for children
   and young people, addressing emotional, behavioural, physical/medical and
