Adjust copy and style for featured sections.

--- a/index.html
+++ b/index.html
@@ -15,38 +15,33 @@ body_class: "home-page"
 <section class="services">
   <h2>Services</h2>
   <p>
-  Psychological assessments and interventions can help with emotional and
-  behavioural problems that are common in childhood and adolescence.
-  Neuropsychological and cognitive assessments can establish a person's
-  strength and weakness in terms of academic issues and help the child to
-  progress academically through individually tailored support from school,
-  family and therapists.
+  Susanna offers psychological and neuropsychological assessments and
+  interventions for children, adolescents and families.
   </p>
   <p class="continue-reading">
   <a href="/services">Services offered</a>
   </p>
 </section>
 
-<section class="about">
-  <h2>About</h2>
+<section class="young-people">
+  <h2>For Young People</h2>
   <p>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec mollis
-  diam. Pellentesque vulputate ligula ut eros scelerisque feugiat. Proin sodales
-  pharetra sem, non lacinia orci vestibulum sollicitudin.
+  Some young people don't know what to expect when they are going to see a
+  psychologist. Here are answers to some frequently asked questions.
   </p>
   <p class="continue-reading">
-  <a href="/about">More about Susanna</a>
+  <a href="/information-for-young-people">More for young people</a>
   </p>
 </section>
 
-<section class="contact">
-  <h2>Contact</h2>
+<section class="about">
+  <h2>About</h2>
   <p>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec mollis
-  diam. Pellentesque vulputate ligula ut eros scelerisque feugiat. Proin sodales
-  pharetra sem, non lacinia orci vestibulum sollicitudin.
+  Susanna completed her clinical training in 2007 and has been working in
+  paediatrics and child and adolescent services in the NHS and the private
+  sector since.
   </p>
   <p class="continue-reading">
-  <a href="/contact" class="button">Contact details</a>
+  <a href="/about">More about Susanna</a>
   </p>
 </section>
