--- a/about.html
+++ b/about.html
@@ -4,29 +4,38 @@ body_class: "about-page"
 ---
 
 <h1>About Dr Susanna Waern</h1>
+
 <p>
 Susanna completed her doctoral training in 2007 at the University of Surrey.
-She has since worked in both Paediatrics and community Child and Adolescent
-Mental Health Services (CAMHS) and has gained significant experience of working
+She has since worked both in Paediatrics and community Child and Adolescent
+Mental Health Services (CAMHS). She completed her Postgraduate Diploma in
+Paediatric Neuropsychology at University College London in 2013. She currently
+works part-time in the NHS providing psychological and neuropsychological
+services to children with cancer, with a specific focus on children with brain
+tumours. Over the years, Susanna has gained significant experience of working
 with a range of different childhood problems as well as physical health
 problems.
 </p>
+
 <p>
-Since 2011, Susanna has worked in the private sector, including working for
-Recolo (providers of neuropsychological rehabilitation). In addition to her
-clinical work, Susanna has worked with Pearson Assessment UK (producers of
-neuropsychological assessments) on a standardisation project for the TEA-Ch 2
-(Test of Everyday Attention for Children). She is also a guest lecturer on the
-Child and Adolescent Mental Health Master's course (MSc) at University College
+In 2011, Susanna started working in the private sector, including working as an
+Associate for Recolo, a service providing neuropsychological rehabilitation in
+the community. In addition to her clinical work, Susanna has worked with
+Pearson Assessment UK (producers of neuropsychological assessments) on a
+standardisation project for a new neuropsychological assessment tool. She is
+also a guest lecturer at a number of universities, including University College
 London.
 </p>
+
 <p>
-Since qualifying, Susanna has kept abreast with the developments of cognitive
-behaviour therapes and is developing her practise in accordance to new evidence
-in order to provide her clients with evidence based treatments. This includes
-Acceptance and Commitment Therapy (ACT) and the use of Mindfulness as a tool to
-support therapy.
+Susanna is committed to providing a evidence-based service and since
+qualifying, she has kept abreast with new research and developed new skills
+through further training in order to ensure that her practice is continuously
+developing. However, she is also highly conscious of the importance of the
+therapeutic relationship and her uttermost aim is to provide a child-friendly
+service, using a range of creative ideas to engage children and young people.
 </p>
+
 <p>
 Susanna is registered with the Health and Care Professions Council and is a
 member of the British Psychological Society, including the Division for
