--- a/contact.html
+++ b/contact.html
@@ -4,21 +4,25 @@ body_class: "contact-page"
 ---
 
 <h1>Contact</h1>
+
 <p>
-Sessions can be arranged at the following addresses:
+Please contact Susanna to book an appointment or for questions by e-mail or
+phone.
 </p>
+
 <p>
-The Gestalt Centre<br>
-96-100 Clifton Street<br>
-London EC2A 4TP<br>
-(Liverpool Street Station)<br>
+E-mail:
+<a href="mailto:dr.susanna.waern@gmail.com">dr.susanna.waern@gmail.com</a><br>
+Telephone: 07881 958 424 (Monday - Saturday)
 </p>
+
 <p>
-Barkantine Practice<br>
-121 Westferry Road<br>
-London, E14 8JH<br>
-(Canary Wharf)<br>
+If the phone is not answered, please leave a message with your name and number
+and your telephone call will be returned as soon as possible.
 </p>
+
 <p>
-Home visits and/or appointments in schools can also be arranged for a charge.
+Please note that these contact details should not be used for psychiatric
+emergencies. In case of an emergency where someone may be at risk of harm,
+please contact your GP or attend your local A&amp;E.
 </p>
