--- a/information-for-young-people.html
+++ b/information-for-young-people.html
@@ -3,63 +3,88 @@ layout: default
 body_class: "children-page"
 ---
 
-<h1>Information for children and teenagers</h1>
+<h1>Information for Young People</h1>
+
 <p>
-Have you ever met a psychologist before? Most people haven't when they come and
-see me the first time and they have all different ideas of what it is going to
-be like.  Some people may feel worried about coming and are angry with their
-parents for making them come. Here are some common worries that people have
-told me in the past:
+Have you ever met a psychologist before? Most people I meet haven't seen a
+psychologist and they all have different ideas of what it is going to be like.
+Some people may feel worried about coming and are angry with their parents for
+making them come. Here are some common questions that people have asked me in
+the past:
 </p>
-<h2>What does a psychologist do the first time you meet?</h2>
-<p>
-The first time we meet, I will ask a lot of questions in order to understand
-what is going on for you and so that we can make a plan of how I can help. I
-will ask what the problem is, when it started and how it started and how it is
-impacting on your life. I will also ask questions about your school and family.
-I will also ask what your goals are. For example, if you are not a very
-confident person, one goal may be to go to a party on your own. If you have a
-phobia of cats, your goal may be to visit a friend who has a cat. We will then
-come up with what we call a 'formulation' (which is a way of explaining how the
-problem came about and why it is still there) and the formulation will help us
-decide what we need to do to tackle the problem and achieve the goals. I may
-also suggest some things that you can try out at home that could help you.
-</p>
-<h2>Does seeing a psychologist mean that you are mental?</h2>
-<p>
-Most people think that psychologists only see people with mental health
-problems.  But actually, most children and adolescents who see psychologists do
-not have a diagnosis of a mental health problem. Most are just going through a
-difficult time, for example because their parents are divorcing, they are being
-bullyied at school, their self esteem is low or they feel worried or angry
-about things. Most people have these experiences at some point, but if they
-have been going on for a while, they can become quite difficult to get out of,
-because a lot of the actions we do and the thoughts we have is actually making
-the problem worse. This does not mean you are mental &mdash; it just means you are
-human.
-</p>
-<h2>Can psychologists read thoughts?</h2>
-<p>
-No, psychologists can't read thoughts but we are good at working out how
-problems have started and how what we do and how we think means that the
-problem is maintained. And then we have lots of strategies and suggestions
-(often proven by research evidence) that can help breaking vicious cycles
-people are stuck in.
-</p>
-<h2>How can talking about my problems help?</h2>
-<p>
-Some people say that just talking about your problem helps them think
-differently about their problem. Other people want a bit more help and that is
-why psychologists are trained in different therapies that have different ways
-of tackling problems.  And although we often can't change what is going on for
-you (for example, parents divorcing or having a chronic illness), we can help
-making the experience less stressful and help you get on with your life and
-achieve your goals in other areas.
-</p>
-<h2>Does a psychologist just sit there without saying anything?</h2>
-<p>
-TO BE COMPLETED
-</p>
+
+<ul>
+  <li>
+    <blockquote>What does a psychologist do the first time you meet?</blockquote>
+
+    <p>
+    I will ask quite a few questions in order to understand what you need help
+    with. I will ask what the problem is, when it started, how it started and how
+    it is impacting on your life. I will also ask questions about your school and
+    family and we will look at what you want to be different in your life. This
+    information will help us decide what we need to do to deal with the problem and
+    achieve your goals.
+    </p>
+  </li>
+
+  <li>
+    <blockquote>Does seeing a psychologist mean that you are mental?</blockquote>
+
+    <p>
+    Most people think that psychologists only see people with mental health
+    problems. But most children and adolescents who see psychologists do not have a
+    diagnosis of a mental illness. Most are just going through a difficult time,
+    maybe due to their parents divorcing or being bullied at school. Or their self
+    esteem may be low, they may feel worried or angry about things. All people
+    experience difficult situations and emotions in their lives, but if they have
+    been going on for a while, it can be useful to see a psychologist to help you
+    get out of the situation.
+    </p>
+  </li>
+
+  <li>
+    <blockquote>Can psychologists read thoughts?</blockquote>
+
+    <p>
+    No, psychologists can't read thoughts but we are good at working out how
+    problems have started and what people do to maintain the problem.
+    </p>
+  </li>
+
+  <li>
+    <blockquote>How can talking about my problems help?</blockquote>
+
+    <p>
+    Some people say that just talking about your problem with someone who can take
+    a more objective view of the situation helps them think differently about their
+    problem. Other people want a bit more help and that is why psychologists are
+    trained in different therapies that have different ways of addressing problems.
+    And although we may not be able to change what is going on for you (for
+    example, parents divorcing or having a chronic illness), we can help making the
+    experience less stressful and help you get on with your life and achieve your
+    goals in other areas.
+    </p>
+  </li>
+
+  <li>
+    <blockquote>Will you tell my parents what we talk about?</blockquote>
+
+    <p>
+    Psychological therapy is confidential. This means that unless agreed, I will
+    not tell your parents what you have told me. However, it is often useful for
+    parents to know a bit about what we discuss to ensure that everyone in the
+    family does what they can to help changing the situation. It is up to you what
+    you want to tell your parents and if you are not comfortable telling them
+    outside the therapy, we can do it together. There is also one exception to
+    confidentiality, which is if you would tell me something that means that you or
+    someone else is at risk. For example, you may have thoughts of harming
+    yourself, or an adult may have done something that is regarded as abuse. In
+    these kinds of situations, I need to ensure that you are not harmed by telling
+    the people who can keep you safe.
+    </p>
+  </li>
+</ul>
+
 <p>
 If you have any other questions you want to ask me before we meet, you can
 e-mail me on
