Add sub navigation to the services page.

--- a/services.html
+++ b/services.html
@@ -3,9 +3,20 @@ layout: default
 body_class: "services-page"
 ---
 
+<nav>
+  <ul>
+    <li><a href="#paediatrics">Paediatric</a></li>
+    <li><a href="#neuropsychology">Neuropsychology</a></li>
+    <li><a href="#assessments">Assessments</a></li>
+    <li><a href="#therapies">Therapies</a></li>
+    <li><a href="#parenting">Parenting</a></li>
+    <li><a href="#consultation-and-teaching">Consultation and Teaching</a></li>
+  </ul>
+</nav>
+
 <h1>Services offered</h1>
 
-<h2>Paediatrics</h2>
+<h2 id="paediatrics">Paediatrics</h2>
 
 <p>
 Children with chronic illness and physical health problems are at increased
@@ -35,7 +46,7 @@ has also worked for many years with siblings and parents of children with
 chronic illness.
 </p>
 
-<h2>Neuropsychology</h2>
+<h2 id="neuropsychology">Neuropsychology</h2>
 
 <h3>Neuropsychological assessment</h3>
 
@@ -74,7 +85,7 @@ teaching the child strategies that can help academic progress, and discussion
 about external tools and devices that can support the child’s learning.
 </p>
 
-<h2>Assessments</h2>
+<h2 id="assessments">Assessments</h2>
 
 <p>
 A psychological assessment focuses on understanding how a problem developed,
@@ -86,7 +97,7 @@ that an individual treatment plan can be developed and the problem can still be
 addressed even if it does not fit the criteria for a specific diagnosis.
 </p>
 
-<h2>Therapies</h2>
+<h2 id="therapies">Therapies</h2>
 
 <p>
 Psychological therapies can be helpful for a range of different emotional and
@@ -168,7 +179,7 @@ death or responsibility for the dead person, early professional contact is
 recommended.
 </p>
 
-<h2>Parenting</h2>
+<h2 id="parenting">Parenting</h2>
 
 <p>
 Being a parent can be very stressful and especially if your child has a
@@ -183,7 +194,7 @@ Depending on the age of your child, your child may have their own therapy in
 conjunction with parenting sessions and some sessions may be done jointly.
 </p>
 
-<h2>Consultation and Teaching</h2>
+<h2 id="consultation-and-teaching">Consultation and Teaching</h2>
 
 <p>
 Consultation and teaching covering a range of topics is offered to NHS
